hphp/hack/test/typecheck/variadic_args4.php
<?hh

class C1 {
  public function meth(...$args): void {}
}

class C2 extends C1 {
  public function meth($x = null): void {}
}
